# ha_chatPDF

./: .gitignore  CLAUDE.md  Makefile  README.md  general_task_description.md  pyproject.toml  requirements.txt
src/part1/: ARCHITECTURE.md  CLAUDE.md  README.md  deploy.sh  docker-compose.yml
src/part1/config/: config.llamacpp.yaml  config.ollama.yaml  config.vllm.yaml  config.yaml
src/part1/engines/: __init__.py  factory.py
src/part2/: ARCHITECTURE.md  README.md  docker-compose.yml  evaluate.py  requirements.txt
src/part2/config/: config.llamacpp.yaml  config.ollama.yaml  config.vllm.yaml  config.yaml
src/part2/dataset_preparation/: README.md  download_pdfvqa.ipynb  pdfvqa_analysis.ipynb
src/part2/engines/: __init__.py  factory.py
src/part2/example_data/: train_dataframe_subset.csv
src/part2/rag/: indexer.py  parser.py  pipeline.py
src/part2/shared/: schemas.py
src/part3/: ARCHITECTURE.md  Dockerfile  README.md  agent.py  docker-compose.yml
src/part4/: ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  main.py  ui.html
src/part5_2/: README.md  REPORT.md  benchmark.py  bert_results.json  results.json  run_questions.py
src/part5_3/: README.md
src/part5_3/config/: config.yaml
src/part5_3/k8s/: configmap.yaml  kustomization.yaml  namespace.yaml
tests/: README.md
tests/part1/: conftest.py  test_configurations.py  test_engine_install.py  test_hello_world.py
tests/part2/: README.md  conftest.py  test_config.py  test_configurations.py  test_evaluate.py  test_parser.py  test_pipeline.py  test_retrieval_log.py
(+35 files in other folders)
