[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "part1"
version = "0.1.0"
dependencies = ["openai>=1.0", "pyyaml>=6.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: requires a live inference server"]
